--- a/estilo/style.css
+++ b/estilo/style.css
@@ -33,7 +33,7 @@ section {
     line-height: 1.5em;
     padding-left: 50px;
     font-family: 'Shadows Into Light', cursive;
-    font-size: 3vw;
+    font-size: 5vw;
 }
 
 section > p {
@@ -50,7 +50,7 @@ section.imagem {
     color: white;
     box-shadow: inset 5px 5px 15px 0px rgba(0, 0, 0, 0.662);
     background-size: cover;
-    background-position: left center;
+    background-position: right center;
     background-attachment: fixed;
 }
 
